# StringPatternAlgorithmsTesting

./: Algorithm.h  Algorithms.h  CMakeLists.txt  bm.h  bndmq2.h  bom.h  bsdm.h  bxs.h  fs.h  hash3.h  kmp.h  kr.h  main.cpp  sbndm.h  skip.h  ssef.h  ssm.h
include/: AUTOMATON.h  GRAPH.h  cell.h  define.h  log2.h  main_header.h  stats.h
python_scripts/: heapscript.py  newscript.py
tests/cfile/: example.c  exampleFullRandomPatternsResultsAbsolute.txt  exampleFullRandomPatternsResultsRelative.txt  exampleRandomPatternFromTextAbsoluteResults.txt  exampleRandomPatternFromTextRelativeResults.txt  exampleUniquePatternsResultsAbsolute.txt  exampleUniquePatternsResultsRelative.txt
tests/final_results/: FinalFullRandomPatternsResultsAbsolute.txt  FinalFullRandomPatternsResultsRelative.txt  FinalRandomPatternsResultsAbsolute.txt  FinalRandomPatternsResultsRelative.txt
tests/genome/: genome.txt  genomeFullRandomPatternsResultsAbsolute.txt  genomeFullRandomPatternsResultsRelative.txt  genomeRandomPatternFromTextAbsoluteResults.txt  genomeRandomPatternFromTextRelativeResults.txt  genomeUniquePatternsResultsAbsolute.txt  genomeUniquePatternsResultsRelative.txt
tests/html/: largeHtmlFullRandomPatternsResultsAbsolute.txt  largeHtmlFullRandomPatternsResultsRelative.txt  largeHtmlRandomPatternFromTextAbsoluteResults.txt  largeHtmlRandomPatternFromTextRelativeResults.txt  largeHtmlUniquePatternsResultsAbsolute.txt  largeHtmlUniquePatternsResultsRelative.txt
tests/json/: accountsFullRandomPatternsResultsAbsolute.txt  accountsFullRandomPatternsResultsRelative.txt  (+4 more)
(+39 files in other folders)
